# smell-reg

./: .gitignore  .gitpod.yml  Dockerfile  README.md  pyproject.toml  render.yaml  run_app.pyw  start_smell_reg.bat
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: __init__.py  main.py
data/materials/: raw_materials.json
data/regulatory/: allergens.json  canada_hotlist.json  formaldehyde_donors.json  metadata.json  naturals.json  prop65.json  reach.json  toxicity_data.json  voc_ingredients.json  voc_limits.json
src/: __init__.py
src/data/: __init__.py  repository.py
src/documents/: __init__.py  pdf_generator.py
src/documents/templates/: allergen_statement.html  fse_report.html  ifra_certificate.html  styles.css  voc_statement.html
src/integrations/: __init__.py  aroma_lab.py
src/models/: __init__.py  allergen.py  fse.py  naturals.py  regulatory.py  voc.py
src/services/: __init__.py  allergen_service.py  compliance_engine.py  formaldehyde_service.py  formula_library.py  fse_service.py  ifra_service.py  market_service.py  materials_service.py  naturals_service.py  voc_service.py
tests/: __init__.py  test_fse_service.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_allergen_service.py  test_compliance_engine.py  test_formaldehyde_service.py  test_ifra_service.py  test_naturals_service.py  test_voc_service.py
ui/: __init__.py  app.py  index.html
