[project]
name = "smell-reg"
version = "0.1.0"
description = "Fragrance Regulatory Compliance Application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "weasyprint>=60.0",
    "jinja2>=3.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.100.0",
    "respx>=0.20.0",
    "httpx>=0.26.0",
]
streamlit = [
    "streamlit>=1.28.0",
    "streamlit-aggrid>=0.3.4",
    "streamlit-pdf-viewer>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
